fix: layout shift, home clickables

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -190,5 +190,6 @@ a.custom-card:hover {
 }
 
 html, body{
-	height: 100%
+	height: 100%;
+	min-height: 101vh;
 }
